tp1/step2/hello-deployements.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: topology.kubernetes.io/zone
                  operator: In
                  values:
                  - eu-west-3a 
      containers:
      - name: hello
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        ports:
        - containerPort: 3000 
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "400m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
        - name: takima-school-registry
