tp1/step2/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hello-ingress
spec:
 ingressClassName: nginx
 rules:
 - host: hello.loic-perrin.cpe.takima.school
   http:
     paths:
     - backend:
         service:
           name: hello-service
           port:
             number: 443
       path: /
       pathType: Prefix
 tls:
 - hosts:
   - hello.loic-perrin.cpe.takima.school
   secretName: app-wildcard
