tp1/step2/unicorn-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: unicorn-front-ingress
 annotations:
  cert-manager.io/cluster-issuer: letsencrypt-staging
  kubernetes.io/tls-acme: 'true'
spec:
 ingressClassName: nginx
 rules:
 - host: unicorn.loic-perrin.cpe.takima.school 
   http:
     paths:
     - backend:
         service:
           name: unicorn-front-service
           port:
             number: 80
       path: /
       pathType: Prefix
 tls:
 - hosts:
   - unicorn.loic-perrin.cpe.takima.school
   secretName: unicorn-front-tls
